<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="order_filter"
        android:id="@+id/order_filter"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_sort_24">
        <menu>
            <item android:title="@string/order_by_colon"
                app:showAsAction="always"
                >
                <menu>
                    <item android:title="@string/creation_date"
                        android:id="@+id/orderDate"
                        app:showAsAction="never"
                    />
                    <item android:title="@string/ranking"
                        android:id="@+id/orderStars"
                        app:showAsAction="never"
                        />
                    <item android:title="@string/difficulty"
                        android:id="@+id/orderDifficulty"
                        app:showAsAction="never"
                        />
                    <item android:title="@string/category"
                        android:id="@+id/orderCategory"
                        app:showAsAction="never"
                        />
                </menu>
            </item>
        </menu>
    </item>
</menu>